# do-not-run-this-code

./: .bzrignore  .classpath  .gitignore  .project  About.Designer.cs  AndroidManifest.xml  ButtonMap.cs  COPYING  DPThread.cs  DroidPad.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  Install.cs  License.Designer.cs  Makefile.am  Makefile.in  PPJoyDebug.Designer.cs  PPJoyDebug.cs  PPJoydotNET.cs  README.md  SetupDroidPad.Designer.cs  SmoothMouse.cs  StartUSB.Designer.cs  StatFuncs.cs  TODO  XML Sample.xml  aclocal.m4  app.config  configure  configure-mingw64  configure.ac  passwdHash.php  project.properties
data/: Makefile.am  Makefile.in  icon.xpm  layouts.glade
data/block/: Makefile.am  Makefile.in
roughly-2009/balman/: AUTHORS  ChangeLog  Makefile.am  README  balman.c  balmantypes.h  maketree.c  maketree.h  movetree.c  movetree.h  system.h  xmalloc.c  xmalloc.h
roughly-2009/droidpad/droidpad-linux/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  config.h.in  configure.ac  libtool
roughly-2009/droidpad/droidpad-linux/data/: Makefile.in  dp.conf.default  droidpad.desktop  droidpad.desktop.in  droidpad.xpm
roughly-2009/droidpad/droidpad-linux/po/: ChangeLog  fr.po
roughly-2009/droidpad/droidpad-linux/src/: Makefile.am  confEdit.hpp  droidpad.cpp  droidpad.hpp  statfuncs.cpp  statfuncs.hpp  wthread.cpp  wthread.hpp
roughly-2010/PhysicsLandEdit/src/: Makefile  Makefile.am  Makefile.am~  Makefile.in  MsgSend.cpp~  MsgSend.h  MsgSend.h~  PhyLandArea.cpp  PhyLandArea.cpp~  PhyLandArea.h  PhyLandArea.h~  PhyLandDList.cpp  PhyLandDList.cpp~  PhyLandDList.h  PhyLandFrame.cpp  PhyLandFrame.h  PhyLandImgRes.cpp  PhyLandImgRes.h  PhyLandJointList.cpp  PhyLandJointList.cpp~  PhyLandJointList.h  PhyLandPEArea.cpp  PhyLandPEArea.h  PhyLandPEArea.h~  PhyLandPolyEdit.cpp  PhyLandPolyEdit.cpp~  PhyLandPolyEdit.h  PhyLandPolyEdit.h~  PhyLandWin.cpp  PhyLandWin.cpp~  PhyLandWin.h  PhyLandWin.h~  header.h  header.h~  physicslandedit  statfuncs.cpp  statfuncs.h  statfuncs.h~
roughly-2010/PhysicsLandEdit/src/.deps/: PhysicsLandEdit-PhyLandArea.Po  PhysicsLandEdit-PhyLandFrame.Po  PhysicsLandEdit-PhyLandPEArea.Po  PhysicsLandEdit-PhyLandPolyEdit.Po  PhysicsLandEdit-statfuncs.Po  physicslandedit-PhyLandArea.Po  physicslandedit-PhyLandDList.Po  physicslandedit-PhyLandFrame.Po  physicslandedit-PhyLandImgRes.Po  physicslandedit-PhyLandJointList.Po  physicslandedit-PhyLandPEArea.Po  physicslandedit-PhyLandPolyEdit.Po  physicslandedit-PhyLandWin.Po  physicslandedit-statfuncs.Po
roughly-2010/gamev2/src/splashscreen/: GameApp.cpp  GameApp.hpp  GameFrame.cpp  GameFrame.hpp  Makefile  Makefile.am  Makefile.in  PrefDialog.cpp  PrefDialog.hpp  main.cpp  main.hpp  wxstatfuncs.cpp  wxstatfuncs.hpp
roughly-2011/powermon/haskell/v2/: Powermon.hs  powermon.cabal
roughly-2013/mandelfly/: .bzrignore  Makefile.am  Makefile.in  aclocal.m4  config.h.in  config.h.in~  configure  configure.ac  signed-attempt
roughly-2013/mandelfly/src/: 2dcanvas.cpp  2dcanvas.hpp  Makefile.am  Makefile.in  bignum-mul.txt  bignum.cpp  bignum.hpp  cl.cpp  cl.hpp  clUtil.c  clUtil.h  clhead.hpp  fractal2d.cpp  fractal2d.hpp  fractalManager.cpp  fractalManager.hpp  gui.cpp  gui.hpp  main.cpp  tests.cpp  tests.hpp
roughly-2013/mandelfly/src/.libs/: libgtest.lai  libgtest.so.0.0.0  lt-mandelfly  mandelfly  test
roughly-2013/mandelfly/src/cl/: load.cpp  load.hpp  mandel.cpp  mandel.hpp  mem.cpp  mem.hpp  test.cpp  test.hpp
roughly-2013/mandelfly/src/kernels/: bignum.h  bn.h  bn_defs.h  mandel_bn.cl  mandel_bn.h  mandel_bn_impl.h  mandel_float.cl  mandel_float.h  numbers.cl
roughly-2013/mandelfly/test/: vector_add.c
roughly-2013/mandelfly/test/native_transform/: bn_native_transform.c
src/: Makefile.am  Makefile.in  cairoPanel.cpp  cairoPanel.hpp  confEdit.cpp  infoDecoder.cpp  infoDecoder.hpp  levelInfoEditor.cpp  levelInfoEditor.hpp  levelSetManager.cpp  levelSetManager.hpp  mainwin.cpp  mainwin.hpp  matrixHelper.cpp  matrixHelper.hpp  newLevelDialog.cpp  openLevelList.cpp  openLevelList.hpp  preferences.cpp  preferences.hpp  spaceApp.cpp  spaceApp.hpp  spaceFrame.cpp  spaceFrame.hpp  spacePanel.cpp  spacePanel.hpp  spaceedit.rc
src/codehead/cbfg/: TexFont.java
src/levelrw/: Makefile.am  Makefile.in  levelManager.cpp  levelManager.hpp  levelrw.cpp  levelrw.hpp
src/libdp/: Makefile.in  uinput.c
src/misc/: Makefile.am  Makefile.in  data.cpp  data.hpp  geometry.cpp  geometry.hpp
src/objects/: Makefile.am  Makefile.in  blackhole.cpp  blackhole.hpp  blockpiece.cpp  blockpiece.hpp  infobox.cpp  infobox.hpp  infoboxEditor.cpp  infoboxEditor.hpp  levelBounds.cpp  levelWall.cpp  levelWall.hpp  planet.cpp  planet.hpp  planetEditor.cpp  planetEditor.hpp  player.cpp  portal.cpp  portal.hpp  rectangular.cpp  rectangular.hpp  sliderEditor.cpp  sliderEditor.hpp  spaceItem.cpp  spaceItem.hpp  spaceItems.hpp  spherical.cpp  spherical.hpp  star.cpp  vortex.cpp  vortex.hpp  wall.cpp  wall.hpp
src/pennygame/admin/: AdminFrame.java  CommInterfaces.java  PennyAdmin.java
src/pennygame/admin/dialogs/: ChangePasswordDialog.java  NewUserDialog.java
src/pennygame/admin/queues/: AdminSConn.java  AdminSConnMainThread.java  AdminSConnPushHandler.java
src/pennygame/admin/uiparts/: OtherTab.java  PastTradesTab.java  UserTab.java
src/pennygame/client/: PennyClient.java  PennyFrame.java
src/pennygame/client/ext/: WindowUtilities.java
src/pennygame/client/queues/: CSConn.java  CSConnMainThread.java  CSConnPushHandler.java
src/pennygame/client/uiparts/: CentrePane.java  LeftPane.java  RightPane.java
src/pennygame/lib/: GlobalPreferences.java  PennyMessage.java  Utils.java
src/pennygame/lib/clientutils/: LoginApplet.java  SConn.java  SConnMainThread.java  SConnPushHandler.java  TimeoutDialog.java
src/pennygame/lib/ext/: Base64.java  PasswordUtils.java  Serialiser.java
src/pennygame/lib/msg/: MLoginCompleted.java  MLoginInitiate.java  MLoginRequest.java  MMyInfo.java  MPauseGame.java  (+8 more)
src/pennygame/projector/: Graph.java  ProjectorClient.java  TradeGraph.java
src/pennygame/server/: PennyServer.java  SettingsLoader.java
(+1278 files in other folders)
