spacedir=$(datadir)/spaceedit

# Original SVGs in game folder, for centralised location.

# ICO icon is used on wxMSW only, so no need to put in UNIX data folder since windows packaging done manually
space_DATA = icon.xpm iconlarge.xpm message.png wallside.png wall.png vortex.png

EXTRA_DIST = $(space_DATA) icon.png icon.svg icon.ico wall.svg vortex.svg
