SUBDIRS=block

spacedir=$(datadir)/spaceedit

# Original SVGs in game folder, for centralised location.

# ICO icon is used on wxMSW only, so no need to put in UNIX data folder since windows packaging done manually
space_DATA = icon.xpm iconlarge.xpm	\
	message.png wallside.png wall.png vortex.png bh.png	\
	planet1.png planet2.png planet3.png planet4.png planet5.png planet6.png planet-s.png planetbouncy.png star.png player.png

EXTRA_DIST = $(space_DATA) icon.png icon.svg icon.ico	\
	wall.svg vortex.svg bh.svg	\
	planet1.svg planet2.svg planet3.svg planet4.svg planet5.svg planet6.svg planet-s.svg planetbouncy.svg star.svg
