bin_PROGRAMS = physicslandedit

physicslandedit_SOURCES = \
		header.h \
		MsgSend.h \
		statfuncs.cpp statfuncs.h \
		PhyLandJointList.cpp PhyLandJointList.h \
		PhyLandImgRes.cpp PhyLandImgRes.h \
		PhyLandPEArea.cpp PhyLandPEArea.h \
		PhyLandPolyEdit.cpp PhyLandPolyEdit.h \
		PhyLandDList.cpp PhyLandDList.h \
		PhyLandArea.cpp PhyLandArea.h \
		PhyLandFrame.cpp PhyLandFrame.h \
		PhyLandWin.cpp PhyLandWin.h 
physicslandedit_LDADD = @LIBS@
physicslandedit_CXXFLAGS = @CXXFLAGS@
AM_CPPFLAGS = -DPREFIX='"$(prefix)"'
